--- a/BYUISite/styles/styles.css
+++ b/BYUISite/styles/styles.css
@@ -13,6 +13,7 @@ nav {
 a {
     color: white;
     margin: 40px;
+    font-size: 1.5em;
 }
 
 h1 {
@@ -20,12 +21,13 @@ h1 {
 }
 
 img {
-    width: 800px;
+    width: 80%;
     border: 4px solid steelblue;
 }
 
 p {
     padding: 10px;
+    width: 80%;
 }
 
 footer {
