Week 05 and stuff

--- a/BYUISite/styles/styles.css
+++ b/BYUISite/styles/styles.css
@@ -3,21 +3,24 @@ of the selectors. */
 
 body {
     text-align: center;
+    margin: 0;
 }
 
 nav {
     background-color: steelblue;
-    padding: 10px;
+    padding: 25px;
 }
 
 a {
     color: white;
     margin: 40px;
+    padding: 25px;
     font-size: 1.5em;
 }
 
 h1 {
     color: steelblue;
+    margin: 50px 0; /* 50px top and bottom, 0 is left and right.*/
 }
 
 img {
@@ -33,6 +36,10 @@ p {
 footer {
     background-color: steelblue;
     color: white;
+}
+
+footer p {
+    padding: 25px;
 }
 
 /* Practicing IDs and Classes*/
