--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -135,7 +135,7 @@
 } 
 /* Activity 5 styles */ 
 /* Cannot figure this one out? I am over complicating it at this
-point. Will return here soon.*/
+point. Please give feedback on what I may have done wrong here. Thank you!*/
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 500px;
