--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -16,7 +16,7 @@ Accent 2 - #92B4F4
 */
 body {
     background-color: #92B4F4; /* Accent 2*/
-    font-family: Helvetica, sans-serif;
+    font-family: Verdana, Helvetica, sans-serif;
     font-size: 22px;
     margin: 0;
     padding: 0;
@@ -28,11 +28,20 @@ h2 {
 
 #logo_link img {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #4472CA; /* Secondary */
     font-family: Candara, Verdana, Helvetica, sans-serif;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
@@ -45,6 +54,11 @@ nav a {
 nav a:hover {
     background-color: #5E7CE2; /* Accent 1*/
     color: white;
+}
+
+.home-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 /* Might need to work on these colors */
@@ -86,8 +100,27 @@ nav a:hover {
     margin: 0 auto;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: white;
 }
 
 #hero-img {
@@ -123,6 +156,9 @@ footer {
     color: rgb(234, 234, 234);
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer .social img {
@@ -160,6 +196,88 @@ footer a:hover {
     margin: 200px 0;
 }
 
-.card-img {
+.mountains {
+    width: 100%;
     border: 10px solid #5E7CE2;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img {
+    width: 100%;
+    border: 10px solid #5E7CE2;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+#background {
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+}
+.msg {
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+/* @Media */
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
