--- a/PortfolioSite/styles/site-plan.css
+++ b/PortfolioSite/styles/site-plan.css
@@ -6,25 +6,26 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #292E33   ;
-  --secondary-color: #30383B ;
-  --accent1-color: #1E2323;
-  --accent2-color: #303B37;
-  --accent3-color: #d9d9d9;
+  --secondary-color: #1E2323 ;
+  --accent1-color: #30383B;
+  --accent2-color: #484848;
+  --accent3-color: #1023ac; /* This is the logo's main color. Also used this as per
+  instructor's feedback. */
 
   /* change the values below to your chosen font(s) */
   --heading-font: Montserrat, Arial;
   --paragraph-font: "Open Sans", "Roboto Slab", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-white: #1023ac;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #1E2323; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --paragraph-background-color: #30383B  ;
+  --nav-link-color: white; /* Maybe black depending on the blue.*/
+  --nav-background-color: #1E2323;
+  --nav-hover-link-color: white; /* Logo color, might look good on gray but maybe not. */
+  --nav-hover-background-color: #1023ac;
 }
 
 
