--- a/PortfolioSite/styles/projects_styles.css
+++ b/PortfolioSite/styles/projects_styles.css
@@ -115,17 +115,30 @@ footer {
 /* Button for Contact Me*/
 #button {
     position: relative;
-    left: 60%;
+    left: 75%;
     bottom: 35px;
     color: white;
-    padding: 10px;
+    padding: 15px;
     text-decoration: none;
+}
+#siteplan {
+    position: relative;
+    left: 83%;
+    bottom: 35px;
+    color: white;
+    padding: 15px;
+    text-decoration: none;
+}
+#siteplan:hover {
+    color: rgb(0, 0, 0);
+    background-color: rgb(123, 123, 123);
+    padding: 15px;
 }
 
 #button:hover {
     color: rgb(0, 0, 0);
     background-color: rgb(123, 123, 123);
-    padding: 20px;
+    padding: 15px;
 }
 
 .social, .social img {
