--- a/PortfolioSite/styles/experience_styles.css
+++ b/PortfolioSite/styles/experience_styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Montserrat|Roboto+Slab');
+
+
 /* Navigation Menu */
 
 nav {
@@ -20,7 +23,8 @@ nav a {
     text-decoration: none;
     position: relative;
     top: -32px;
-    left: 32%;
+    left: 30%;
+    font: "Roboto Slab";
 }
 
 nav a:hover {
@@ -33,7 +37,9 @@ h1 {
     color: white;
     text-align: center;
     font-size: 24px;
-    margin-top: 25px;
+    margin-top: 30px;
+    font-family: Montserrat;
+    letter-spacing: 10px;
 }
 
 .title2 h1 {
@@ -67,6 +73,10 @@ h1 {
     margin: 5px 5px;
 }
 
+.grid-item h1 {
+    margin-top: 10px;
+}
+
 /* Won't be transparent for some reason.*/
 .grid-item img {
     width: 150px;
@@ -78,7 +88,7 @@ h1 {
 
 body {
     background-color: rgb(33, 40, 40);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Montserrat, "Open Sans", "Roboto Slab", Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
