--- a/PortfolioSite/styles/projects_styles.css
+++ b/PortfolioSite/styles/projects_styles.css
@@ -1,3 +1,6 @@
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Montserrat|Roboto+Slab');
+
 /* Navigation Menu */
 
 nav {
@@ -20,7 +23,8 @@ nav a {
     text-decoration: none;
     position: relative;
     top: -32px;
-    left: 32%;
+    left: 30%;
+    font: "Roboto Slab";
 }
 
 nav a:hover {
@@ -33,14 +37,15 @@ nav a:hover {
 h1 {
     color: white;
     font-size: 32px;
-    font-family: Arial;
+    font-family: Montserrat;
+    letter-spacing: 10px;
     text-align: center;
 }
 
 #home-grid {
     display: grid;
     grid-template-columns: 500px 500px;
-    grid-template-rows: 675px;
+    grid-template-rows: 690px;
     justify-content: center;
 }
 
@@ -76,7 +81,7 @@ h1 {
 
 body {
     background-color: rgb(33, 40, 40);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Montserrat, "Open Sans", "Roboto Slab", Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
