--- a/PortfolioSite/styles/contactme_styles.css
+++ b/PortfolioSite/styles/contactme_styles.css
@@ -38,6 +38,8 @@ h1 {
     text-align: center;
     font-size: 24px;
     margin-top: 25px;
+    font: Montserrat;
+    letter-spacing: 10px;
 }
 /* HTML and CSS */
 
@@ -46,11 +48,53 @@ body {
     font-family: Montserrat, "Open Sans", "Roboto Slab", Arial, sans-serif;
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 #content {
     max-width: 1600px;
     margin: 0 auto;
+}
+
+/* Main Content of Contact Me Page*/
+#home {
+    width: 95%;
+    margin-left: 30px;
+}
+
+* {box-sizing: border-box;}
+
+input[type=text], input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid black;
+  background-color: rgb(56, 56, 56);
+  color: white;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  font: "Open Sans";
+}
+
+input[type=submit] {
+  background-color: #1023ac;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #000e75;
+}
+
+.container {
+  border-radius: 5px;
+  background-color: rgb(29, 29, 29);
+  padding: 20px;
 }
 
 /* Footer stuff all down here I hope. */
