--- a/PortfolioSite/styles/styles.css
+++ b/PortfolioSite/styles/styles.css
@@ -259,3 +259,15 @@ footer {
     bottom: -6px;
     margin-left: -150px;
 }
+
+
+/* @Media */
+@media screen and (max-width: 900px) {
+    .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+}
