--- a/PortfolioSite/styles/styles.css
+++ b/PortfolioSite/styles/styles.css
@@ -261,7 +261,8 @@ footer {
 }
 
 
-/* @Media */
+/* @Media - Don't think this will be a 
+possibility with this webpage.
 @media screen and (max-width: 900px) {
     .home-grid {
         display: block;
@@ -271,3 +272,5 @@ footer {
         flex-direction: column;
     }
 }
+
+*/
