Added Accordion which I kind of like a lot!

--- a/PortfolioSite/styles/projects_styles.css
+++ b/PortfolioSite/styles/projects_styles.css
@@ -157,3 +157,53 @@ footer {
     bottom: -6px;
     margin-left: -150px;
 }
+
+/* Testing for visual appeal */
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: rgb(29, 29, 29);
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: center;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+  
+  /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+    background-color: #1023ac;
+}
+
+.accordion:after {
+    content: '\02795'; /* Unicode character for "plus" sign (+) */
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+  
+.active:after {
+    content: "\2796"; /* Unicode character for "minus" sign (-) */
+}
+  
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+    padding: 0 18px;
+    background-color: rgb(29, 29, 29);
+    color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+  .panel img {
+    width: 350px;
+    margin-left: 525px;
+  }
+  .panel img:hover {
+    opacity: 50%;
+    background-color: white;
+  }
