Changes to portfolio + misc stuff added like S6P

--- a/PortfolioSite/styles/styles.css
+++ b/PortfolioSite/styles/styles.css
@@ -258,16 +258,16 @@ footer {
 }
 
 
-/* @Media - Don't think this will be a 
-possibility with this webpage.
+
 @media screen and (max-width: 900px) {
     .home-grid {
         display: block;
         height: auto;
+        width: auto;
     }
     nav, footer {
         flex-direction: column;
+        display: flex;
     }
 }
 
-*/
